--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body{
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
     background-color: #1F2937;
     font-family: 'Roboto';
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 a{
