--- a/style.css
+++ b/style.css
@@ -28,9 +28,11 @@ a{
 
 }
 
+/*HEADER*/
 .header{
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
     
 }
 
@@ -39,9 +41,46 @@ a{
     gap: 12px;
 }
 
+.left-links{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.right-links{
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: bold;  
+}
+
+/*FOOTER*/
+
 .footer, .right-links{
     color:white;
     height: 36px;
     font-size: 14px;
 }
 
+/*CONTAINER 1*/
+.p_header{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 800;
+}
+
+.p_secondary{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.b_c1{
+    background-color: #3882F6;
+    border-radius: 4px;
+    border: none;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
