--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     height: 100vh;
     margin: 0;
-    overflow: hidden;
     background-color: #1F2937;
     font-family: 'Roboto';
     display: flex;
@@ -31,8 +30,10 @@ a{
 /*HEADER*/
 .header{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     
 }
 
@@ -83,4 +84,20 @@ a{
     font-size: 18px;
     color: #F9FAF8;
     font-weight: bold;
+}
+
+.container_1{
+    display: flex;
+    justify-content: space-around;
+    gap:20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.c1_left{
+    
+}
+
+.c1_right{
+    
 }
