--- a/style.css
+++ b/style.css
@@ -90,11 +90,35 @@ a{
 }
 
 .img{
-    max-width: 400px;
-    
+    max-width: 250px;
+    border-radius: 10px;
 }
 
 /*CONTAINER 2*/
 .container_2{
     background-color: #F9FAF8;
+    text-align: center; 
+}
+
+.c2_title{
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.img2{
+    max-width: 100px;
+    border-radius: 10px;
+}
+
+.cards{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.card{
+    max-width: 150px;
 }
