--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     background-color: #1F2937;
+    box-sizing: border-box;
 }
 
 ul{
@@ -23,6 +24,7 @@ a{
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-top: 8px;
 
 }
 
@@ -98,9 +100,12 @@ a{
 .container_2{
     background-color: #F9FAF8;
     text-align: center; 
+    flex-grow: 1;
 }
 
 .c2_title{
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
@@ -144,4 +149,57 @@ a{
     font-style: normal;
     align-self: flex-end;
     font-size: 20px;
+}
+
+/*Container 4*/
+.container_4{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: #F9FAF8;
+}
+
+.call2action{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #3882F6;
+    border-radius: 4px;
+    border: none;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    padding: 20px;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.b_c4{
+    background-color: #3882F6;
+    border-radius: 4px;
+    border-color: #E5E7EB;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 18px;
+    color: #F9FAF8;
+    font-weight: bold;
+    height: 40px;
+        
+}
+
+.c4_title{
+    font-size: 22px;
+    color: #F9FAF8;
+    font-weight: bold;
+}
+
+.c4_secondary{
+    font-size: 18px;
+    color: #F9FAF8; 
+    font-weight: 400;  
 }
