--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ a{
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     
 }
 
@@ -66,11 +68,14 @@ a{
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 800;
+    margin: 0;
 }
 
 .p_secondary{
     font-size: 18px;
     color: #E5E7EB;
+    margin-top: 2px;
+    margin-bottom: 10px;
 }
 
 .b_c1{
@@ -87,12 +92,18 @@ a{
 
 .container_1{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     gap:20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
+
+
+
 .img{
-    max-width: 250px;
+    max-width: 200px;
     border-radius: 10px;
 }
 
@@ -135,6 +146,8 @@ a{
     display: flex;
     flex-direction: column;
     align-content: center;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 .c3_quote{
