--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ a{
 .b_c1{
     background-color: #3882F6;
     border-radius: 4px;
-    border: none;
+    /*border: none;*/
+    border-color: #F9FAF8;
     padding: 5px;
     padding-left: 15px;
     padding-right: 15px;
@@ -144,12 +145,21 @@ a{
     background-color: #E5E7EB;
     color: #1F2937;
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    justify-content: center;
 }
 
+.c3_quote{
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+}
+
+.c3_author{
+    display: flex;
+    font-weight: 900; 
+    justify-content: flex-end;
+}
+/*
 .c3_quote{
     font-style: italic;
     font-size: 26px;
@@ -163,7 +173,7 @@ a{
     align-self: flex-end;
     font-size: 20px;
 }
-
+*/
 /*Container 4*/
 .container_4{
     display: flex;
