--- a/style.css
+++ b/style.css
@@ -24,8 +24,12 @@ a{
     display: flex;
     justify-content: center;
     align-content: center;
-    margin-top: 8px;
+}
 
+.footer_msg{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /*HEADER*/
@@ -98,6 +102,7 @@ a{
     gap:20px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 10px;
 }
 
 
@@ -158,7 +163,7 @@ a{
     display: flex;
     justify-content: center;
     font-style: italic;
-    font-size: 26px;
+    font-size: 23px;
 }
 
 .c3_author{
